2009-07-28  Mark Ellis  <mark@mpellis.org.uk>

	* patches from Ilya Bakulin to fix compilation problems

2009-07-26  Mark Ellis  <mark@mpellis.org.uk>

	* split IRAPIStream decls into separate header
	* initial implementation of rapi2 api - functional using
	  synce-hal, but most utility funcs not implemented yet

2009-07-21  Mark Ellis  <mark@mpellis.org.uk>

	* split types out of rapi.h into rapitypes.h, available for
	  rapi2 api

2009-07-19  Mark Ellis  <mark@mpellis.org.uk>

	* change all backend functions to accept a rapi_context as
	  first parameter, instead of using current_context, which
	  is obtained by the calling wrapper functions anyway
	* restructure source tree for rapi2 api; currently the
	  source refers to differences in over-the-wire calls to
	  WM5 and pre-WM5 devices as rapi1 and rapi2, these now
	  become backend_ops_{1,2}
	* keep standard RAPI api and our non-standard wrapper
	  funcs separate

2009-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* 0.14 release

2009-07-12  Mark Ellis  <mark@mpellis.org.uk>

	* implement streaming CeRapiInvoke for rapi2
	* move non RAPI API functions that are identical for all
	  WM versions out of the indirection mechanism, ie. 
	  CeCopyFileA, CeRapiInvokeA, and the IRAPIStream functions
	* deprecate CeFileCopyA() and CeRapiInvokeA() in favour of
	  rapi_copy() and rapi_invoke(), to avoid confusion with
	  "real" RAPI API

2009-07-10  Mark Ellis  <mark@mpellis.org.uk>

	* implement CeRapiInvoke for rapi2 using buffers, based on
	  patch from David Richardson, many thanks !

2009-06-25  Mark Ellis  <mark@mpellis.org.uk>

	* fixes to CeRapiInvoke tests

2009-06-08  Mark Ellis  <mark@mpellis.org.uk>

	* create bootstrap script that doesn't run configure,
	  autogen.sh call bootstrap then configure
	* add configure options for odccm and synce-hal support,
	  and required dbus build structure
	* move rapi socket connection for odccm and hal from
	  libsynce to rapi_context, add rapi_context_disconnect()
