@@ -1,3 +1,10 @@
+2009-08-08  Mark Ellis  <mark@mpellis.org.uk>
+
+	* IRAPIDevice only exists once for each device, all funcs now
+	  get a reference to this device instead of a new instance
+	* use new libsynce HRESULT handlers to return the correct types
+	  in a few cases
+
 2009-07-28  Mark Ellis  <mark@mpellis.org.uk>
 
 	* patches from Ilya Bakulin to fix compilation problems
